Fix highlight background bleeding outside border

--- a/static/css/syntax.css
+++ b/static/css/syntax.css
@@ -1,4 +1,4 @@
-.highlight { background-color: #f9f9f9 }
+pre.highlight { background-color: #f9f9f9; background-clip: border-box }
 .highlight .c { color: #999988; font-style: italic } /* Comment */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
 .highlight .k { color: #000000; font-weight: bold } /* Keyword */
